<resources>
    <string name="app_name">Fit Track</string>
    <string name="fitness_tracking">Fitness\nTracking</string>
    <string name="nutrition_management">Nutrition\nManagement</string>
    <string name="allow_activity_permission">Allow Activity Permission</string>
    <string name="allow_google_permission">Allow Google Permission</string>
    <string name="today">Today</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="_0">0</string>
    <string name="kcal">Kcal</string>
    <string name="steps_taken">Steps Taken</string>
    <string name="steps">Steps</string>
    <string name="distance">Distance</string>
    <string name="km">Km</string>
    <string name="allow_location_permission">Allow Location Permission</string>
    <string name="search_item">Search item</string>
    <string name="recent">Recent</string>
    <string name="g">g</string>
    <string name="enter_amount">Enter amount</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full name</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="logout">LogOut</string>
</resources>