<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:src="@drawable/placeholder" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/description"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="20">

            <EditText
                android:id="@+id/amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="18"
                android:digits="0123456789."
                android:hint="@string/enter_amount"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/g"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save"
            android:textColor="@color/white"
            android:background="@drawable/button_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/save" />
    </LinearLayout>
</androidx.cardview.widget.CardView>